--- a/articles/azure-app-configuration/TOC.yml
+++ b/articles/azure-app-configuration/TOC.yml
@@ -4,6 +4,8 @@
   items:
     - name: 关于 Azure 应用配置
       href: overview.md
+    - name: 最佳做法
+      href: howto-best-practices.md
     - name: 常见问题解答
       href: faq.md
 - name: 快速入门
@@ -34,26 +36,32 @@
           href: quickstart-feature-flag-spring-boot.md
 - name: 教程
   items:
-    - name: 使用 ASP.NET Core 启用动态配置
-      href: enable-dynamic-configuration-aspnet-core.md
-    - name: 在 .NET Core 应用中启用动态配置
-      href: enable-dynamic-configuration-dotnet-core.md
-    - name: 使用 .NET Framework 启用动态配置
-      href: enable-dynamic-configuration-dotnet.md
-    - name: 在 Azure Functions 应用中实现动态配置
-      href: enable-dynamic-configuration-azure-functions-csharp.md
-    - name: 在 Spring Boot 应用中实现动态配置
-      href: enable-dynamic-configuration-java-spring-app.md
-    - name: 在 .NET Core 应用中使用功能标志
-      href: use-feature-flags-dotnet-core.md
-    - name: 在 Spring Boot 应用中使用功能标志
-      href: use-feature-flags-spring-boot.md
+    - name: 启用动态配置
+      items:
+        - name: ASP.NET Core
+          href: enable-dynamic-configuration-aspnet-core.md
+        - name: .NET Core
+          href: enable-dynamic-configuration-dotnet-core.md
+        - name: .NET Framework
+          href: enable-dynamic-configuration-dotnet.md
+        - name: Azure Functions
+          href: enable-dynamic-configuration-azure-functions-csharp.md
+        - name: Spring Boot
+          href: enable-dynamic-configuration-java-spring-app.md
+    - name: 使用功能标志
+      items:
+        - name: .NET Core
+          href: use-feature-flags-dotnet-core.md
+        - name: Spring Boot
+          href: use-feature-flags-spring-boot.md
     - name: 管理功能标志
       href: manage-feature-flags.md
-    - name: 在 ASP.NET Core 应用中使用 Key Vault 引用
-      href: use-key-vault-references-dotnet-core.md
-    - name: 在 Spring Boot 中使用 Key Vault 引用
-      href: use-key-vault-references-spring-boot.md
+    - name: 使用 Key Vault 引用
+      items:
+        - name: ASP.NET Core
+          href: use-key-vault-references-dotnet-core.md
+        - name: Spring Boot
+          href: use-key-vault-references-spring-boot.md
     - name: 与 CI/CD 管道集成
       href: integrate-ci-cd-pipeline.md
     - name: 使用 Helm 与 Kubernetes 部署集成
@@ -105,8 +113,6 @@
       href: howto-app-configuration-event.md
     - name: 自动备份配置存储
       href: howto-backup-config-store.md
-    - name: 最佳做法
-      href: howto-best-practices.md
 - name: 参考
   items:
     - name: 配置
