--- a/articles/key-vault/secrets/toc.yml
+++ b/articles/key-vault/secrets/toc.yml
@@ -28,12 +28,12 @@
       href: quick-create-template.md
 - name: 教程
   items:
-    - name: 轮换
+    - name: 机密轮换
       items:
-        - name: 双凭据轮换教程
-          href: tutorial-rotation-dual.md
-        - name: 单用户/密码轮换教程
+        - name: 使用一组凭据的资源的机密轮换
           href: tutorial-rotation.md
+        - name: 使用两组凭据的资源的机密轮换
+          href: tutorial-rotation-dual.md
     - name: 应用程序集成
       items:
         - name: 使用 Linux VM 和 ASP.NET 控制台应用程序存储机密
