--- a/articles/devtest-labs/TOC.yml
+++ b/articles/devtest-labs/TOC.yml
@@ -232,6 +232,10 @@
           href: devtest-lab-mandatory-artifacts.md
         - name: 排查有关应用项目的问题
           href: devtest-lab-troubleshoot-apply-artifacts.md
+    - name: 加密实验室使用的存储空间和操作系统磁盘
+      items:
+        - name: 加密实验室使用的存储空间
+          href: encrypt-storage.md
     - name: 与 CI/CD 集成
       items:
         - name: 将实验室集成到 Azure Pipelines CI/CD 管道中
