--- a/articles/event-hubs/TOC.yml
+++ b/articles/event-hubs/TOC.yml
@@ -206,11 +206,11 @@
           href: event-hubs-management-libraries.md
     - name: 安全
       items:
-        - name: 配置 IP 防火墙
+        - name: 允许从特定 IP 地址访问
           href: event-hubs-ip-filtering.md
-        - name: 配置虚拟网络服务终结点
+        - name: 允许从特定虚拟网络访问
           href: event-hubs-service-endpoints.md
-        - name: 配置专用终结点
+        - name: 允许通过专用终结点访问
           href: private-link-service.md
         - name: 配置客户管理的密钥
           href: configure-customer-managed-key.md
