--- a/articles/machine-learning/index.yml
+++ b/articles/machine-learning/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: j-martens
   ms.author: jmartens
   ms.date: 07/30/2020
-  ms.openlocfilehash: 1006874272fa4798d9e56cbc76d7b039e697c413
-  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
+  ms.openlocfilehash: 066f82bf214a9a5a2a364bc9dc021a1baa31feac
+  ms.sourcegitcommit: 0b8320ae0d3455344ec8855b5c2d0ab3faa974a3
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/23/2020
-  ms.locfileid: "87047788"
+  ms.lasthandoff: 07/30/2020
+  ms.locfileid: "87433067"
 landingContent:
 - title: 机器学习入门
   linkLists:
@@ -31,7 +31,7 @@ landingContent:
       url: tutorial-first-experiment-automated-ml.md
     - text: RStudio
       url: tutorial-1st-r-experiment.md
-- title: 在工作室中使用设计器和 AutoML
+- title: 在工作室中使用 AutoML 或拖动
   linkLists:
   - linkListType: overview
     links:
@@ -51,6 +51,12 @@ landingContent:
       url: tutorial-designer-automobile-price-train-score.md
     - text: 创建图像标记项目
       url: tutorial-labeling.md
+- title: 将你的模型引入 Azure
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: 将本地模型部署到云
+      url: how-to-deploy-existing-model.md
 - title: 使用 Python SDK 进行训练
   linkLists:
   - linkListType: tutorial
