--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -93,7 +93,7 @@
     - name: 资源管理器模板
       href: template-samples.md
     - name: 代码示例
-      href: 'https://docs.microsoft.com/samples/browse/?term=Event%20Grid'
+      href: /samples/browse/?term=Event+Grid
     - name: Azure Policy 内置策略定义
       href: ./policy-samples.md
 - name: 概念
